--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </table>
 <hr>
   <h2>INTRODUCTION</h2>
-  <p>Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies form the given five subjects shown that are
+  <p>Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies in the subjects  which are
 <b> <a href="https://en.wikipedia.org/wiki/Mathematics">maths</a>,<a href="https://en.wikipedia.org/wiki/Chemistry">chemistry</a>,<a href="https://en.wikipedia.org/wiki/physics">physics</a>,
   <a href="htts://en.wikipedia.org/wiki/compter science">computer science</a>,<a href="https://en.wikipedia.org/wiki/english">english</a>. </b> </p>
 <hr size='4'>
