--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <style>
+    body {
+      background-color: #d4ebd0;
+    }
+
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+  </style>
+
+
     <meta charset="utf-8">
     <title></title>
+
   </head>
+
   <body>
     <p><i> <a href="https://accounts.google.com/ServiceLogin/webreauth?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">GMAIL:  lalitcric0806@gmail.com</a></i></p>
     <p><b>MOBILE NO.:   7302508811</b></p>
@@ -26,7 +43,7 @@
  <textarea name="name" rows="8" cols="50"></textarea>
  <input type="submit" name="your reviews" value="submit">
  <br>
- 
+
     </form>
 
   </body>
