--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <style>
+    body {
+      background-color: #d4ebd0;
+    }
+
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+  </style>
+
     <meta charset="utf-8">
     <title></title>
+
+
   </head>
   <body>
     <ul>
