--- a/index.html
+++ b/index.html
@@ -2,52 +2,99 @@
 <html lang="en" dir="ltr">
 
 <head>
+
+<style>
+body {
+
+
+  background-color: #d4ebd0;
+}
+
+hr {
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 5px;
+  width: 5%;
+}
+#heading:hover{
+  color:green;
+  font-size:80px;
+}
+.c++{
+background-color:pink;
+}
+.computer{
+  background-color:green;
+}
+.circular{
+  border-radius: 100%;
+}
+#heading2:hover{
+  color:gold;
+  font-size:50px;
+}
+
+
+</style>
   <meta chars]et="utf-8">
   <title>lalit personal site</title>
+
+
+
 </head>
 <hr size='6'>
+
 <body>
   <table cellspacing='20'>
     <tr>
-      <td>  <img src="https://i.ytimg.com/vi/LV3HyatlHa0/hqdefault.jpg" alt="your image is here"></td>
-      <td>  <h1><b>Lalit Joshi</b></h1>
-        <p><i>"lalit joshi"</i> is the founder of the website the <b>lallantop</b></p></td>
+      <td> <img class="c++ circular" src="https://i.ytimg.com/vi/LV3HyatlHa0/hqdefault.jpg" alt="your image is here"></td>
+      <td>
+        <h1 id="heading"><b>Lalit Joshi</b></h1>
+        <p><i>"lalit joshi"</i> is the founder of the website the <b>lallantop</b></p>
+      </td>
 
 
     </tr>
   </table>
-<hr>
-  <h2>INTRODUCTION</h2>
-  <p>Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies in the subjects  which are
-<b> <a href="https://en.wikipedia.org/wiki/Mathematics">maths</a>,<a href="https://en.wikipedia.org/wiki/Chemistry">chemistry</a>,<a href="https://en.wikipedia.org/wiki/physics">physics</a>,
-  <a href="htts://en.wikipedia.org/wiki/compter science">computer science</a>,<a href="https://en.wikipedia.org/wiki/english">english</a>. </b> </p>
-<hr size='4'>
-<h2><b><a href="hobbies.html">INTEREST AND HOBBIES</a></b></h2>
-<hr>
-<h2><b><a href="BOOKS.HTML">Books and technology</a></b></h2>
-<hr>
-<h3><b><a href="contact.html">Contact Details</a></b></h3>
-<hr>
-<table border='2'>
-  <thead>
-  <tr>
-    <th>DATES</th>
-    <th>WORK EXPERIENCE</th>
-  </tr>
-</thead>
-<tbody>
-<tr>
-<td>2010</td>
-<td>GRADUATED FROM IIT BOMBAY</td>
-</tr>
-<tr>
-  <td>2010-2020</td>
-  <td>LEADIND WEB DEVELOPER AT GOLDMAN SACHHS</td>
-</table>
-<hr>
-<h3><a href="skills.html">skills</a></h3>
-<hr>
+  <hr>
 
+  <h2 id="heading2">INTRODUCTION</h2>
+  <p>Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies in the given five subjects that are:
+    <b> <a href="https://en.wikipedia.org/wiki/Mathematics">maths</a>,<a href="https://en.wikipedia.org/wiki/Chemistry">chemistry</a>,<a href="https://en.wikipedia.org/wiki/physics">physics</a>,
+      <a href="htts://en.wikipedia.org/wiki/compter science">computer science</a>,<a href="https://en.wikipedia.org/wiki/english">english</a>. </b> </p>
+  <hr size='4'>
+  <table cellspacing='40'>
+    <tr>
+      <td><h2><b><a href="hobbies.html">INTEREST AND HOBBIES</a></b></h2></td>
+
+      <td><img class="computer" src="https://tse4.mm.bing.net/th?id=OIP.L8A8fKRUG_uQ3LiD3SX3AAHaEU&pid=Api&P=0&w=284&h=167" alt="picture is here"></td>
+    </tr>
+  </table>
+  <hr>
+  <h2><b><a href="BOOKS.HTML">Books and technology</a></b></h2>
+  <hr>
+  <h2><b><a href="contact.html">Contact Details</a></b></h2>
+  <hr>
+  <table border='2'>
+    <thead>
+      <tr>
+        <th>DATES</th>
+        <th>WORK EXPERIENCE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2010</td>
+        <td>GRADUATED FROM IIT BOMBAY</td>
+      </tr>
+      <tr>
+        <td>2010-2020</td>
+        <td>LEADIND WEB DEVELOPER AT GOLDMAN SACHHS</td>
+  </table>
+  <hr>
+  <h3><a href="skills.html">skills</a></h3>
+  <hr>
 
 
 
