--- a/BOOKS.HTML
+++ b/BOOKS.HTML
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
+
     <meta charset="utf-8">
     <title></title>
+    <style>
+    body {
+      background-color: #d4ebd0;
+    }
+
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+  </style>
   </head>
   <body>
     <ol>
