--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,19 @@
 <table border=3 cellspacing="10">
   <thead>
+    <style>
+    body {
+      background-color: #d4ebd0;
+    }
+
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+    </style>
+
     <tr>
       <th>WORK</th>
       <th>ratings</th>
