--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,9 @@
 <input type="email address" name="your email address" value="">   <input type="submit" name="submit" value="submit">
 <br>
 <label>password</label>
- <input type="password" name="your password" value="">   <input type="submit" name="" value="submit">
+ <input type="password" name="your password" value="">
+ <input type="submit" name="" value="submit">
+ 
  <br>
  <label>dob</label>
  <input type="date" name="date of birth" value="">
