--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html lang="en" dir="ltr">
 
 <head>
-
-<style>
-body {
-
-
-  background-color: #d4ebd0;
-}
-
+  <style>
 hr {
   border-style: none;
   border-top-style: dotted;
   border-color: grey;
   border-width: 5px;
   width: 5%;
+
 }
 #heading:hover{
   color:green;
   font-size:80px;
+  position:relative;
+  left: 70px;
 }
 .c++{
 background-color:pink;
@@ -35,12 +31,26 @@ background-color:pink;
   font-size:50px;
 }
 
+body {
+
+  background-color: #d4ebd0;
+}
+.para2{
+  font-size: 40px;
+  color: green;
+}
+h2{
+  font-size: 50px;
+}
+.para1{
+  color: black;
+  font-size: 20px;
+}
 
 </style>
+
   <meta chars]et="utf-8">
   <title>lalit personal site</title>
-
-
 
 </head>
 <hr size='6'>
@@ -51,16 +61,14 @@ background-color:pink;
       <td> <img class="c++ circular" src="https://i.ytimg.com/vi/LV3HyatlHa0/hqdefault.jpg" alt="your image is here"></td>
       <td>
         <h1 id="heading"><b>Lalit Joshi</b></h1>
-        <p><i>"lalit joshi"</i> is the founder of the website the <b>lallantop</b></p>
+        <p class="para1"><i>"lalit joshi"</i> a experienced <b>WEB DEVELOPER</b></p>
       </td>
-
-
     </tr>
   </table>
   <hr>
 
   <h2 id="heading2">INTRODUCTION</h2>
-  <p>Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies in the given five subjects that are:
+  <p class="para2">Lalit joshi is the sutdent at <B>st josephs convent school</B> peerumadara ramnagar nainital.He had completed his studies in the given five subjects that are:
     <b> <a href="https://en.wikipedia.org/wiki/Mathematics">maths</a>,<a href="https://en.wikipedia.org/wiki/Chemistry">chemistry</a>,<a href="https://en.wikipedia.org/wiki/physics">physics</a>,
       <a href="htts://en.wikipedia.org/wiki/compter science">computer science</a>,<a href="https://en.wikipedia.org/wiki/english">english</a>. </b> </p>
   <hr size='4'>
@@ -85,18 +93,16 @@ background-color:pink;
     </thead>
     <tbody>
       <tr>
-        <td>2010</td>
-        <td>GRADUATED FROM IIT BOMBAY</td>
+        <td>2018</td>
+        <td>Matriculate passed from st josephs convent school </td>
       </tr>
       <tr>
-        <td>2010-2020</td>
-        <td>LEADIND WEB DEVELOPER AT GOLDMAN SACHHS</td>
+        <td>2020</td>
+        <td>Persuing B-tech in computer science and engineering</td>
   </table>
   <hr>
   <h3><a href="skills.html">skills</a></h3>
   <hr>
-
-
 
 </body>
 
