--- a/skills.html
+++ b/skills.html
@@ -19,11 +19,11 @@
       <th>ratings</th>
         </tr>
         <tr>
-          <td>java programming</td>
+          <td>web development</td>
           <td>5 stars</td>
         </tr>
         <tr>
-          <td>ai programming</td>
+          <td>c++ programming</td>
           <td>4.5 stars</td>
         </tr>
   </thead>
