--- a/hobbies.html
+++ b/hobbies.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="https://login.readingplus.com/">READING</a></li>
+      <li><a href="https://login.readingplus.com/">READING books</a></li>
       <br>
-      <li><a href="https://en.wikipedia.org/wiki/Surfing">SURFING</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Surfing">SURFING on internet</a></li>
       <br>
     </ul>
 
